将右侧默认显示内容修改为网站延期提醒页面

--- a/index.html
+++ b/index.html
@@ -79,49 +79,7 @@
 	</div>
 	<div class="rt">
 		<ul id="workContent">
-			<li style="display:none;">
-				<div class="text">
-					<h1>事务内容</h1>
-					<div class="cnt">{#这里是具体的内容#}</div>
-				</div>
-			</li>
-			<li>
-				<div class="pceggs">
-					<div id="notLoggedIn">尚未登陆</div>		
-					<div id="accountInfo">尚未登录PC蛋蛋帐号，<a href="#" class="login JQ_login">[立即登录]</a><!--登陆帐户：<span><a href="#">60931111</a></span><a href="#" class="logout">[退出]</a>--></div>
-					<div class="answerPanel">
-						<div class="wrapper set" id="JQ_autoAnswerPanel">
-							<label><input type="checkbox" checked="checked" /><span>启用自动答题</span></label>
-							<div class="info">自动答题提示信息</div>
-							</div>
-						<div class="wrapper" id="JQ_subjectPanel">
-							<div class="finished">今日问题已全部回答完成！</div>
-							<h1>{#这里是题目名称#}<span class="multiple">多选</span>
-								<span style="display:none;" id="JQ_subjectOriginalText"></span>
-								<span class="quesInfo">本组第 1 题，共 5 题，共奖励 5000 金蛋。</span>
-							</h1>
-							<div class="choose" style="_display:none;">
-								<ul>
-									<li><label><input type="checkbox" /><img src="#" alt="" /></label></li>
-									<li><label><input type="checkbox" /><img src="#" alt="" /></label></li>
-									<li><label><input type="checkbox" /><img src="#" alt="" /></label></li>
-									<li><label><input type="checkbox" /><img src="#" alt="" /></label></li>
-								</ul>
-								<div class="c">
-									<button>提&nbsp;&nbsp;交</button>
-									<button disabled="disabled" class="processing"><span>正在提交...</span></button>
-									<a href="javascript:void(0);">[寻找答案]</a>
-								</div>
-							</div>
-							<div class="ts">
-								<div class="t">本题回答正确。</div>
-								<button>继续回答下一组题目/下一题/换题重答</button>
-							</div>
-						</div>
-					</div>
-				</div>
-			</li>
-			<li>我是4</li>
+			<li><iframe src="http://www.dahounet.com/myindex/" width="100%" height="100%" scrolling="yes" frameborder="0"></iframe></li>
 		</ul>
 	</div>
 </div>
