--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>无标题文档</title>
+<title>大猴的浏览器首页</title>
 <link href="style.css" rel="stylesheet" type="text/css">
 <script src="js/jquery-1.8.2.min.js"></script>
 </head>
