【事务列表】鼠标移动至一项事务上时，弹出的事务信息气泡新增事务wid显示。

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
 		<div class="loading">加载中...</div>
 		<h1>{#这里是事务的标题#}</h1>
 		<ul>
+			<li><span>事务wid:</span>1</li>
 			<li><span>事务类型：</span>每日事务</li>
 			<li><span>执行时间：</span><div class="r"><i>2012-05-31 00:00:00</i> 至 <i>2012-09-25 17:00:00</i></div></li>
 			<li><span>完成情况：</span><a href="javascript:void(0);" class="l" title="点击查看详细完成情况"><em>50/55</em>，完成率<em>95%</em></a></li>
